--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+
 .logo{
     width: 10%;
 }
@@ -6,6 +7,10 @@ h1{
     text-align: center;
     position: absolute;
     width: 100%;
+}
+
+h2{
+    text-align: center;
 }
 
 img{
@@ -17,6 +22,12 @@ main{
 }
 .USA {
     background-image: url("./USA.webp");
+    width: 100%;
+    margin: 0;
+}
+
+html{
+    margin: 0;
 }
 
 a{
@@ -25,4 +36,8 @@ a{
 
 header{
     background-color: rgba(255,255,255,0.5);
+}
+
+footer{
+    text-align: center;
 }
