--- a/lesson2/styles/design.css
+++ b/lesson2/styles/design.css
@@ -43,6 +43,7 @@ section{
     main{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 20px;
     }
     img{
         max-width: 500px;
