--- a/lesson2/styles/design.css
+++ b/lesson2/styles/design.css
@@ -1,14 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Smooch&display=swap');
+
 section{
     display: block;
     text-align: center;
   }
   
-  h1{
+  h1, h2, h3{
+    font-family: 'Josefin Sans', sans-serif;
     text-align: center;
   }
   
   p{
-    text-align: center;    
+    font-family: 'Smooch', cursive;
+    text-align: center;  
+    font-size: 15px;  
   }
   
   img{
