--- a/chambers/css/main.css
+++ b/chambers/css/main.css
@@ -1,19 +1,66 @@
 
+#RenDate{
+    display: none;
+    text-align: center;
+}
+header{
+    display: grid;
+    grid-template-columns: 500px 1fr;
+    
+}
+#div1 button{
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    background-color: rgb(144, 185, 238) ;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 75px;
+
+}
+#div6 button{
+    background-color: lightgray ;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 75px;
+    width: 100%;
+
+
+}
+ #div1 button a{
+    color: white;
+    text-decoration: none;
+ }
+
+#homepic{
+    width: 100%;
+  
+}
 .date{
     text-align: center;
     background-color: white;
     
 }
-button{
-    background-color: red;
+nav button{
+    background-color: blue;
 }
 
-header h1{
-    display: flex;
-    justify-content: center;
-}
+
 nav li{
     display: none;
+    background-color: aqua;
+    padding: 10px;
+    width: 50px;
+    
+}
+nav li:hover{
+    background-color: yellow;
+    color: blue;
+}
+nav a{
+    text-decoration: none;
 }
 .happen li {
     display: block;
@@ -29,26 +76,71 @@ ul{
 #div1{
     background-color: lightgray;
     height: 300px;
+    position: relative;
 }
 
+
 #div2{
-    background-color: lightgray;
+    background-color: blue;
     height: 300px;
+    text-align: center;
+    padding: 10px;
+
+
+
 }
+#div2 h2 {
+    text-align: center;
+}
+#icon1{
+    width: 30px;
+}
+#icon2{
+    width: 70px;
+}
+#icon3{
+    width: 100px;
+}
+#div3a h3{
+    font-size: 30px;
+}
+#div2 h2{
+    color: yellow;
+    font-size: 25px;
+    
+}
+#div3a h2{
+    color: yellow;
+    font-size: 25px;
+    text-align: center;
+    
+}
+#div2 h3{
+    color: white;   
+}
+
 #div3a{
-    background-color: lightgray;
+    background-color: blue;
     height: 300px;
+    text-align: center;
+
 }
 
 #div3{
-    background-color: lightgray;
+    background-color: blue;
     height: 300px;
+    text-align: center;
+    padding: 10px;
+
 }
 
 #div4{
-    background-color: lightgray;
+    background-color: blue;
     height: 300px;
     border: solid black 2px;
+    text-align: center;
+    padding: 10px;
+
 }
 
 #div5{
@@ -58,6 +150,10 @@ ul{
 }
 #div6{
     display: none;
+    background-color: blue;
+    text-align: center;
+    padding: 10px;
+
 }
 #div7{
     display: none;
@@ -78,6 +174,8 @@ body {
     }
     #div1{
         grid-column: 1/5;
+        grid-row: 1/2;
+        position: static;
     }
     #div2{
         grid-column: 1/4;
@@ -120,14 +218,17 @@ body {
         display: flex;
         justify-content: space-around;
         background-color: aqua;
+        
     }
+    
+
 
 
 
   }
   @media only screen and (min-width: 1115px) {
     body {
-      background-color: yellow; 
+      background-color: white; 
     }
     main{
         display: grid;
@@ -142,6 +243,7 @@ body {
         grid-column: 2/3;
         grid-row: 1/3;
         height: 600px;
+        position: relative;
     }
     #div2{
         grid-column: 1/2;
@@ -150,10 +252,12 @@ body {
     #div3a{
         grid-column: 1/2;
         grid-row: 2/3;
+        
     }
     #div6{
         grid-column: 1/2;
         grid-row: 3/4;
+        background-color: blue;
     }
     #div3{
         grid-column: 2/3;
@@ -187,7 +291,8 @@ body {
     nav li{
         display: block;
     }
-    button{
+    .HMB{
         display: none;
     }
+
   }
