--- a/chambers/css/main.css
+++ b/chambers/css/main.css
@@ -101,7 +101,10 @@ ul{
     width: 70px;
 }
 #icon3{
-    width: 100px;
+    width: 70px;
+}
+#icon4{
+    width: 70px;
 }
 #div3a h3{
     font-size: 30px;
@@ -146,9 +149,14 @@ ul{
 }
 
 #div5{
-    background-color: lightgray;
+    background-color: blue;
     height: 300px;
     border: solid black 2px;
+    text-align: center;
+    padding: 10px;
+}
+#div5 h2{
+    color: yellow;
 }
 #div6{
     display: none;
@@ -159,13 +167,14 @@ ul{
 }
 #div7{
     display: none;
+    
 }
 
 body {
     background-color: purple;
   }
   
-  @media only screen and (min-width: 600px) {
+  @media only screen and (min-width: 500px) {
     body {
       background-color: lightblue;
     }
@@ -228,7 +237,7 @@ body {
 
 
   }
-  @media only screen and (min-width: 1115px) {
+  @media only screen and (min-width: 1000px) {
     body {
       background-color: white; 
     }
@@ -295,6 +304,19 @@ body {
     }
     .HMB{
         display: none;
+    }
+    #div7{
+        background-color: blue;
+        height: 300px;
+        border: solid black 2px;
+        text-align: center;
+        padding: 10px;
+    }
+    #icon5{
+        width: 70px;
+    }
+    #div7 h2{
+        color: yellow;
     }
 
   }
