--- a/chambers/css/Lazy.css
+++ b/chambers/css/Lazy.css
@@ -1,12 +1,18 @@
+*{
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box; 
+}
+
 img:hover{
     opacity: .6;
     transform: scale(0.9);
 }
 img{
     width: 100%;
-    /* border: solid black 10px;
+    border: solid black 10px;
     transition: transform .5s;
-    box-shadow: 5px 5px 10px #6f7364; */
+    box-shadow: 5px 5px 10px #6f7364;
 }
 h2{
     text-align: center;
