--- a/chambers/css/Join.css
+++ b/chambers/css/Join.css
@@ -18,7 +18,7 @@ input[type=text], input[type=email], input[type=tel]{
     #flexbox{
         display: flex;
         width: 100%;
-        justify-content: space-between;
+        justify-content: space-around;
     }
     input[type=text], input[type=email], input[type=tel]{
         margin-bottom: 15px;
