--- a/chambers/css/Join.css
+++ b/chambers/css/Join.css
@@ -37,7 +37,7 @@ input[type=text], input[type=email], input[type=tel]{
     #flexbox{
         display: flex;
         width: 100%;
-        justify-content: space-between;
+        justify-content: space-around;
     }
     input[type=text], input[type=email], input[type=tel]{
         margin-bottom: 15px;
@@ -49,4 +49,10 @@ input[type=text], input[type=email], input[type=tel]{
     #xyz{
         width: 40%;
     }
+    body{
+        margin: 0;
+        padding: 0;
+    }
+   
+
 } 
