--- a/chambers/css/main.css
+++ b/chambers/css/main.css
@@ -241,14 +241,14 @@ body {
   }
   @media only screen and (min-width: 1000px) {
     body {
-      background-color: white; 
+      background-color: gray; 
     }
     main{
         display: grid;
         grid-template-columns: 1fr 3fr 1fr;
         
     }
-    ul{
+    #ul ul{
         
         flex-direction: row;
     }
