--- a/Vin's Potatos/Styles/page3.css
+++ b/Vin's Potatos/Styles/page3.css
@@ -12,7 +12,8 @@ nav a{
     text-decoration: none;
     color: gold;
     text-align: center;
-    padding: 35px;
+    padding: 15px;
+    display: block;
   }
   nav a:hover{
     background-color: white;
@@ -29,6 +30,33 @@ nav a{
   }
   body{
     background-color: red;
+    margin: 0;
+    padding: 0;
+  }
+  picture{
+    position: relative;
+  }
+  #pricebutton{
+    position: absolute;
+    z-index: 1;
+    bottom: 100px;
+    right: 100px;
+    border-radius: 5em;
+    background-color: black;
+    
+  }
+  button{
+    border-radius: 5em;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    
+  }
+  button a{
+    text-decoration: none;
+    padding: 20px;
+    font-size: 2em;
+    color: white;
   }
   
 
@@ -112,5 +140,17 @@ nav a{
         }
         form a{
             text-decoration: none;
+        }
+        nav a{
+            padding: 35px;
+        }
+        #form1 img{
+          width: 20%;
+        }
+        #form2 img{
+          width: 20%;
+        }
+        #form3 img{
+          width: 20%;
         }
 }
