--- a/Vin's Potatos/Styles/page5.css
+++ b/Vin's Potatos/Styles/page5.css
@@ -19,7 +19,8 @@ nav a{
     text-decoration: none;
     color: gold;
     text-align: center;
-    padding: 35px;
+    padding: 15px;
+    display: block;
   }
   nav a:hover{
     background-color: white;
@@ -36,7 +37,27 @@ nav a{
   }
   body{
     background-color: red;
+    margin: 0;
+    padding: 0;
   }  
+  picture{
+    position: relative;
+  }
+  #pricebutton{
+    position: absolute;
+    z-index: 1;
+    bottom: 100px;
+    right: 100px;
+    border-radius: 5em;
+    background-color: black;
+    
+  }
+  button a{
+    text-decoration: none;
+    padding: 20px;
+    font-size: 2em;
+    color: white;
+  }
 
 @media only screen and (min-width: 500px){
     p{
@@ -149,4 +170,8 @@ nav a{
         footer .social img   {
             padding-top: 15px;
         }      
+        nav a{
+            padding: 35px;
+        }
+        
 }
