--- a/Vin's Potatos/Styles/page4.css
+++ b/Vin's Potatos/Styles/page4.css
@@ -44,7 +44,7 @@ nav a{
   picture{
     position: relative;
   }
-  button{
+  picture a{
     position: absolute;
     z-index: 1;
     bottom: 100px;
@@ -53,10 +53,10 @@ nav a{
     background-color: black;
     
   }
-  button a{
+  a{
     text-decoration: none;
     padding: 20px;
-    font-size: 2em;
+    font-size: 1em;
     color: white;
   }
   
