--- a/Vin's Potatos/Styles/home.css
+++ b/Vin's Potatos/Styles/home.css
@@ -9,7 +9,7 @@ body{
 picture{
   position: relative;
 }
-button{
+picture a{
   position: absolute;
   z-index: 1;
   bottom: 100px;
@@ -18,7 +18,7 @@ button{
   background-color: black;
   
 }
-button a{
+a{
   text-decoration: none;
   padding: 20px;
   font-size: 2em;
