--- a/Vin's Potatos/Styles/page5.css
+++ b/Vin's Potatos/Styles/page5.css
@@ -43,7 +43,7 @@ nav a{
   picture{
     position: relative;
   }
-  #pricebutton{
+  picture a{
     position: absolute;
     z-index: 1;
     bottom: 100px;
@@ -52,10 +52,10 @@ nav a{
     background-color: black;
     
   }
-  button a{
+  a{
     text-decoration: none;
     padding: 20px;
-    font-size: 2em;
+    font-size: 1em;
     color: white;
   }
 
