--- a/Vin's Potatos/Styles/page3.css
+++ b/Vin's Potatos/Styles/page3.css
@@ -4,10 +4,7 @@
     
 }
 
-nav{
-  display: flex;
-  justify-content: space-between;
-}
+
 nav a{
     text-decoration: none;
     color: gold;
@@ -36,14 +33,13 @@ nav a{
   picture{
     position: relative;
   }
-  #pricebutton{
+  .pictureA{
     position: absolute;
     z-index: 1;
-    bottom: 100px;
+    bottom: 200px;
     right: 100px;
     border-radius: 5em;
-    background-color: black;
-    
+    background-color: white;
   }
   picture a{
     border-radius: 5em;
@@ -57,6 +53,9 @@ nav a{
     padding: 20px;
     font-size: 1em;
     color: white;
+  }
+  #usStorage, a{
+    color: black;
   }
   
 
@@ -134,6 +133,7 @@ nav a{
         }
         header{
             background-color: black;
+            margin-top: -5px;
         }
         footer .social img   {
             padding-top: 15px;
@@ -152,5 +152,9 @@ nav a{
         }
         #form3 img{
           width: 20%;
+        }
+        nav{
+          display: flex;
+          justify-content: space-between;
         }
 }
