--- a/Vin's Potatos/Styles/page5.css
+++ b/Vin's Potatos/Styles/page5.css
@@ -5,10 +5,7 @@
     
 }
 
-nav{
-  display: flex;
-  justify-content: space-between;
-}
+
 p{
     font-family: Source Sans Pro, sans-serif;
 }
@@ -43,10 +40,10 @@ nav a{
   picture{
     position: relative;
   }
-  picture a{
+  .pictureA{
     position: absolute;
     z-index: 1;
-    bottom: 100px;
+    bottom: 200px;
     right: 100px;
     border-radius: 5em;
     background-color: black;
@@ -166,6 +163,7 @@ nav a{
         }
         header{
             background-color: black;
+            margin-top: -5px;
         }
         footer .social img   {
             padding-top: 15px;
@@ -173,5 +171,8 @@ nav a{
         nav a{
             padding: 35px;
         }
-        
+        nav{
+            display: flex;
+            justify-content: space-between;
+          }
 }
