--- a/Vin's Potatos/Styles/home.css
+++ b/Vin's Potatos/Styles/home.css
@@ -1,3 +1,7 @@
+*{
+  padding: 0;
+  margin: 0;
+}
 #banner{
     width: 100%;
     height: 500px;
@@ -9,10 +13,10 @@ body{
 picture{
   position: relative;
 }
-picture a{
+.pictureA {
   position: absolute;
   z-index: 1;
-  bottom: 100px;
+  bottom: 200px;
   right: 100px;
   border-radius: 5em;
   background-color: black;
@@ -21,7 +25,7 @@ picture a{
 a{
   text-decoration: none;
   padding: 20px;
-  font-size: 2em;
+  font-size: 1em;
   color: white;
 }
 nav a{
@@ -59,6 +63,7 @@ body{
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-gap: 10px;
+        padding: 0 2.5vw;
     }
     main h3{
         grid-column: 1/3;
@@ -76,15 +81,18 @@ body{
     #img2{
         grid-column: 2/3;
         grid-row: 3/4;
+        width: 100%;
     }
     #img1{
        grid-column: 1/2;
        grid-row: 2/3;
+       width: 100%;
     }
     footer{
         display: flex;
         justify-content: space-around;
         background-color: black;
+        margin-bottom: -50px;
     }
     body{
       background-color: #99582A;
