--- a/Vin's Potatos/Styles/page2.css
+++ b/Vin's Potatos/Styles/page2.css
@@ -4,10 +4,7 @@
     
 }
 
-nav{
-  display: flex;
-  justify-content: space-between;
-}
+
 nav a{
     text-decoration: none;
     color: gold;
@@ -36,10 +33,10 @@ nav a{
   picture{
     position: relative;
   }
-  picture a{
+  .pictureA{
     position: absolute;
     z-index: 1;
-    bottom: 100px;
+    bottom: 200px;
     right: 100px;
     border-radius: 5em;
     background-color: black;
@@ -93,12 +90,17 @@ nav a{
         }
         header{
             background-color: black;
+            margin-top: -5px;
         }
         footer .social img   {
             padding-top: 15px;
         }
         nav a{
             padding: 35px;
+          }
+          nav{
+            display: flex;
+            justify-content: space-between;
           }
 }
 
