--- a/Vin's Potatos/Styles/page6.css
+++ b/Vin's Potatos/Styles/page6.css
@@ -4,10 +4,7 @@
     
 }
 
-nav{
-  display: flex;
-  justify-content: space-between;
-}
+
 p{
     font-family: Source Sans Pro, sans-serif;
 }
@@ -42,10 +39,10 @@ nav a{
   picture{
     position: relative;
   }
-  picture a{
+  .pictureA{
     position: absolute;
     z-index: 1;
-    bottom: 100px;
+    bottom: 200px;
     right: 100px;
     border-radius: 5em;
     background-color: black;
@@ -93,6 +90,7 @@ nav a{
         }
         header{
             background-color: black;
+            margin-top: -5px;
         }
         footer .social img   {
             padding-top: 15px;
@@ -100,4 +98,47 @@ nav a{
         nav a{
             padding: 35px;
         }
+        tbody tr:nth-child(3)  {
+          font-style: italic;
+      }
+      tr:nth-child(5) td:nth-child(3){  /* 5 rows down .... Third child of that row*/
+          background-color: lightgray;
+      }
+      
+      tr:nth-child(even){
+          background-color: lightgrey;
+          
+      }
+      
+      thead td, tfoot td{
+          background-color: blue;
+          text-align: center;
+      }
+      
+      td, th{
+          padding: 10px;
+          font-size: 1em;
+      }
+      table, th, td{
+          border: 1px solid black;
+          border-collapse: collapse;
+      }
+      
+      
+      table{
+          width: 100%;
+          margin: 0 auto; /** Its a block lever so margin 0 auto **/
+          margin-top: 25px;
+      }
+      
+      form{
+          margin-bottom: 50px;
+      }
+      main table{
+        grid-column: 1/3;
+      }
+      nav{
+        display: flex;
+        justify-content: space-between;
+      }
   }
