--- a/Vin's Potatos/Styles/page2.css
+++ b/Vin's Potatos/Styles/page2.css
@@ -54,11 +54,13 @@ nav a{
     #logoh1{
         display: grid;
         grid-template-columns: 1fr 1fr;
+        padding: 5px;
         }
         main{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr 1fr;
             grid-gap: 10px;
+            padding: 5px;
         }
         main h2{
             grid-column: 1/5;
