--- a/Vin's Potatos/Styles/home.css
+++ b/Vin's Potatos/Styles/home.css
@@ -74,20 +74,36 @@ body{
     #mainp2{
       grid-column: 1/2;
       grid-row: 3/4;
-      line-height: 50px;
+      line-height: 70px;
     }
     #mainp1{
-      line-height: 40px;
+      line-height: 100px;
     }
     #img2{
         grid-column: 2/3;
         grid-row: 3/4;
         width: 100%;
+        border: solid black 5px;
+  
+        transition: transform .6s;
+        box-shadow: 5px 5px 10px #6f7364;
+    }
+    #img2:hover{
+      opacity: .6;
+      transform: scale(0.9);
+    }
+    #img1:hover{
+      opacity: .6;
+      transform: scale(0.9);
     }
     #img1{
        grid-column: 1/2;
        grid-row: 2/3;
        width: 100%;
+       border: solid black 5px;
+  
+      transition: transform .5s;
+      box-shadow: 5px 5px 10px #6f7364;
     }
     footer{
         display: flex;
@@ -115,6 +131,10 @@ body{
     nav a{
       padding: 35px;
       font-size: 1.1em;
+    }
+    *{
+      margin: 0;
+      padding: 0;
     }
     
   }
