Form action page

--- a/Vin's Potatos/Styles/formaction.css
+++ b/Vin's Potatos/Styles/formaction.css
@@ -1,6 +1,88 @@
-body{
-    background-color: pink;
-}
-img{
-    width: 50%;
-}
+*{
+    padding: 0;
+    margin: 0;
+  }
+  #banner{
+      width: 100%;
+      height: 500px;
+  }
+  body{
+    margin: 0;
+    padding: 0;
+  }
+  picture{
+    position: relative;
+  }
+  .pictureA {
+    position: absolute;
+    z-index: 1;
+    bottom: 200px;
+    right: 100px;
+    border-radius: 5em;
+    background-color: black;
+    
+  }
+  a{
+    text-decoration: none;
+    padding: 20px;
+    font-size: 1em;
+    color: white;
+  }
+  nav a{
+    text-decoration: none;
+    color: gold;
+    text-align: center;
+    padding: 15px;
+    display: block;
+  }
+  nav a:hover{
+    background-color: white;
+    color: blue;
+  }
+  footer a{
+    text-decoration: none;
+    color: gold;
+    text-align: center;
+    padding: 25px;
+  }
+  footer h3{
+    color: white;
+  }
+
+  @media only screen and (min-width: 500px){
+    #logoh1{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 5px;
+        }
+        body{
+            background-color: #99582A;
+        }
+        nav{
+            display: flex;
+            justify-content: space-between;
+        }
+        nav a{
+            padding: 35px;
+            font-size: 1.1em;
+        }
+        footer .social img   {
+            padding-top: 15px;
+        }
+        footer a{
+            font-size: 1.1em;
+        }
+        header{
+            background-color: black;
+            margin-top: -5px;
+        }
+        footer{
+            display: flex;
+            justify-content: space-around;
+            background-color: black;
+            margin-top: 10px;
+        }
+        h1{
+            margin-bottom: 10px;
+        }
+  }
