--- a/Vin's Potatos/Styles/formaction.css
+++ b/Vin's Potatos/Styles/formaction.css
@@ -48,6 +48,9 @@
   footer h3{
     color: white;
   }
+  body{
+    background-color: #99582A;
+  }
 
   @media only screen and (min-width: 500px){
     #logoh1{
