--- a/Vin's Potatos/Styles/page5.css
+++ b/Vin's Potatos/Styles/page5.css
@@ -55,6 +55,9 @@ nav a{
     font-size: 1em;
     color: white;
   }
+  body{
+    background-color: #99582A;
+  }
 
 @media only screen and (min-width: 500px){
     p{
